--- a/lib/components/icon_component/icon_component.html
+++ b/lib/components/icon_component/icon_component.html
@@ -1,5 +1,5 @@
-<div role="presentation" title="{{title}}" [attr.aria-label]="title">
+<div role="presentation" [title]="title" [attr.aria-label]="title">
     <svg>
-        <use sourced src="{{src}}"></use>
+        <use [attr.xlink:href]="'gfx/icons/icons.svg#icon-' + src"></use>
     </svg>
 </div>
