--- a/lib/components/fo_select_component/fo_select_component.html
+++ b/lib/components/fo_select_component/fo_select_component.html
@@ -1,6 +1,6 @@
 <label (click)="(visible = true)">{{label}}:&nbsp;
     <material-dropdown-select
-            [buttonText]="selectedModel?.toString()"
+            [buttonText]="selectedModel == null ? nullSelectionButtonText : selectedModel.toString()"
             [popupMatchInputWidth]="false"
             [options]="selectionOptions"
             [selection]="selectionModel"
