--- a/lib/style/_style.scss
+++ b/lib/style/_style.scss
@@ -1,5 +1,5 @@
-@import "_constants";
-@import "_vendor_prefix";
+@import "constants";
+@import "vendor_prefix";
 
 @import url(https://fonts.googleapis.com/css?family=Lato);
 $fontFamily: 'Lato', Roboto, Helvetica, Arial, sans-serif;
