select/multiselect styles

--- a/lib/components/fo_multi_select_component/fo_multi_select_component.scss
+++ b/lib/components/fo_multi_select_component/fo_multi_select_component.scss
@@ -1,5 +1,11 @@
+material-dropdown-select
+{
+  width: 100%;
+  max-width: 40rem;
+}
 div.selected-values
 {
-  font-size: 0.8em;
+  font-size: 0.9em;
   color: #888;
+  margin: 0.3rem 0 1rem 0;
 }
