--- a/lib/components/fo_select_component/fo_select_component.css
+++ b/lib/components/fo_select_component/fo_select_component.css
@@ -1,2 +1,2 @@
-
+label{display:block;margin-bottom:0.2rem;font-size:0.9em;color:#888}material-dropdown-select{width:100%;max-width:40rem;margin-bottom:1rem}
 /*# sourceMappingURL=fo_select_component.css.map */
