--- a/lib/components/fo_multi_select_component/fo_multi_select_component.css
+++ b/lib/components/fo_multi_select_component/fo_multi_select_component.css
@@ -1,2 +1,2 @@
-div.selected-values{font-size:0.8em;color:#888}
+material-dropdown-select{width:100%;max-width:40rem}div.selected-values{font-size:0.9em;color:#888;margin:0.3rem 0 1rem 0}
 /*# sourceMappingURL=fo_multi_select_component.css.map */
