modal and table design updates

--- a/lib/components/app_component.html
+++ b/lib/components/app_component.html
@@ -33,4 +33,4 @@
     <fo-icon [src]="'arrow-right'"></fo-icon>
 </div>
 
-<fo-modal title="hej" [visible]="false" [fixedHeight]="false" [fixedWidth]="false" error="ERROR TEXT"><p>test</p></fo-modal>
+<fo-modal title="hej" [visible]="true" [fixedHeight]="false" [fixedWidth]="true" error="ERROR TEXT"><p>test</p></fo-modal>
