--- a/lib/components/fo_multi_select_component/fo_multi_select_component.html
+++ b/lib/components/fo_multi_select_component/fo_multi_select_component.html
@@ -5,5 +5,4 @@
         [selection]="selectionModel"
         [(visible)]="visible">
 </material-dropdown-select>
-<div class="selected-values">{{selectedValues}}</div>
-
+<div class="selected-values"><span [foShortenOverflow]="selectedValues">{{selectedValues}}</span></div>
