--- a/lib/components/fo_multi_select_component/fo_multi_select_component.scss
+++ b/lib/components/fo_multi_select_component/fo_multi_select_component.scss
@@ -7,5 +7,7 @@ div.selected-values
 {
   font-size: 0.9em;
   color: #888;
-  margin: 0.3rem 0 1rem 0;
+  margin: 0.3rem 0 0.912rem 0;
+  white-space: nowrap;
+  //overflow: hidden;
 }
