--- a/lib/components/fo_modal_component/fo_modal_component.css
+++ b/lib/components/fo_modal_component/fo_modal_component.css
@@ -1,2 +1,2 @@
-div.header{color:white}material-dialog{min-width:15rem;max-width:90vw;max-height:95vh}material-dialog.fixed-height{height:95vh;overflow-y:scroll}material-dialog.fixed-height div.content{margin-top:1rem;margin-bottom:1rem}material-dialog.fixed-width{width:90vw}.float-right{float:right}
+div.header{color:white}material-dialog{min-width:15rem;max-width:90vw;max-height:95vh}material-dialog.fixed-height{height:95vh}material-dialog.fixed-height div.content{margin-top:1rem;margin-bottom:1rem}material-dialog.fixed-width{width:90vw;max-width:1250px}.float-right{float:right}
 /*# sourceMappingURL=fo_modal_component.css.map */
