file and image upload style fixes

--- a/lib/components/app_component.html
+++ b/lib/components/app_component.html
@@ -51,4 +51,4 @@
     <fo-icon [src]="'arrow-right'"></fo-icon>
 </div>
 
-<fo-modal title="hej" [(visible)]="popupVisible" [fixedHeight]="false" [fixedWidth]="true" error="ERROR TEXT"><p>test</p></fo-modal>
+<fo-modal title="hej" [visible]="false" [fixedHeight]="false" [fixedWidth]="true" error="ERROR TEXT"><p>test</p></fo-modal>
