--- a/lib/components/fo_image_file_component/fo_image_file_component.html
+++ b/lib/components/fo_image_file_component/fo_image_file_component.html
@@ -1,3 +1,4 @@
+<label>{{label}}</label>
 <div class="container">
     <div *ngIf="source != null && !source.isEmpty" class="image">
         <img [src]="source" alt="{{alt}}" />
