--- a/lib/components/fo_image_file_component/fo_image_file_component.scss
+++ b/lib/components/fo_image_file_component/fo_image_file_component.scss
@@ -1,7 +1,9 @@
-@import '../../common';
+@import '../../style/common';
 
 div.container
 {
+  border: 1px dashed $color-grey;
+  padding: 0.5rem;
   text-align: center;
 
   div.image
@@ -33,6 +35,6 @@ div.container
 
   material-button.add
   {
-    margin: 2rem 0;
+    //margin: 1rem 0;
   }
 }
