--- a/lib/components/fo_sidebar_component/fo_sidebar_component.css
+++ b/lib/components/fo_sidebar_component/fo_sidebar_component.css
@@ -1,45 +1,51 @@
-:host /deep/ div.background {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(255, 255, 255, 0.5);
-  z-index: 998;
-  display: none; }
-:host /deep/ div.background.visible {
-  display: inherit; }
-:host /deep/ div.transformer {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 300px;
-  height: 100%;
-  overflow-x: hidden;
-  overflow-y: auto;
-  background-color: white;
-  z-index: 999;
-  padding: 0;
-  -webkit-box-shadow: 1px 1px 4px #ccc;
-  -moz-box-shadow: 1px 1px 4px #ccc;
-  box-shadow: 1px 1px 4px #ccc;
-  -webkit-transition: transform 100ms ease;
-  -moz-transition: transform 100ms ease;
-  -ms-transition: transform 100ms ease;
-  -o-transition: transform 100ms ease;
-  transition: transform 100ms ease; }
-  :host /deep/ div.transformer div.header {
-    padding: 5rem 0.5rem 1rem 1rem;
-    background-color: #333; }
-    :host /deep/ div.transformer div.header h3 {
-      margin: 0;
-      color: white;
-      text-transform: uppercase; }
-:host /deep/ div.transformer.closed {
-  -webkit-transform: translateX(-300px);
-  -moz-transform: translateX(-300px);
-  -ms-transform: translateX(-300px);
-  -o-transform: translateX(-300px);
-  transform: translateX(-300px); }
+:host /deep/ {
+  /*
+  div.background
+  {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255,255,255,0.5);
+    z-index: 998;
+    display: none;
+  }
+  div.background.visible
+  {
+    display: inherit;
+  }*/ }
+  :host /deep/ div.transformer {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 300px;
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
+    background-color: white;
+    z-index: 999;
+    padding: 0;
+    -webkit-box-shadow: 1px 1px 4px #ccc;
+    -moz-box-shadow: 1px 1px 4px #ccc;
+    box-shadow: 1px 1px 4px #ccc;
+    -webkit-transition: transform 100ms ease;
+    -moz-transition: transform 100ms ease;
+    -ms-transition: transform 100ms ease;
+    -o-transition: transform 100ms ease;
+    transition: transform 100ms ease; }
+    :host /deep/ div.transformer div.header {
+      padding: 5rem 0.5rem 1rem 1rem;
+      background-color: #666; }
+      :host /deep/ div.transformer div.header h3 {
+        margin: 0;
+        color: white;
+        text-transform: uppercase; }
+  :host /deep/ div.transformer.closed {
+    -webkit-transform: translateX(-300px);
+    -moz-transform: translateX(-300px);
+    -ms-transform: translateX(-300px);
+    -o-transform: translateX(-300px);
+    transform: translateX(-300px); }
 
 /*# sourceMappingURL=fo_sidebar_component.css.map */
