--- a/lib/components/app_component.html
+++ b/lib/components/app_component.html
@@ -7,15 +7,9 @@
     </div>
     <div group>
         <div label>Category #2</div>
-        <material-list-item>Item #4</material-list-item>
+        <material-list-item (click)="sidebarVisible = false">Item #4</material-list-item>
     </div>
 </fo-sidebar>
-<material-button
-        raised
-        (trigger)="sidebarVisible = true">
-    open sidenav
-</material-button>
-
 <div>
     <fo-select label="Användare" [(selectedModel)]="selectedModel" [options]="options" [allowNullSelection]="true"></fo-select>
 </div>
