--- a/lib/components/fo_file_upload_component/fo_file_upload_component.html
+++ b/lib/components/fo_file_upload_component/fo_file_upload_component.html
@@ -1,5 +1,5 @@
 <label>{{label}}</label>
-<div class="container">
+<div class="container" (dragenter)="$event.preventDefault()" (dragover)="$event.preventDefault()" (drop)="onDrop($event)">
     <input #input type="file" (change)="onFileChange($event)" accept="image/jpg,image/jpeg,image/png,image/gif,application/pdf" />
     <material-button raised (trigger)="input.click()"><glyph icon="folder_open"></glyph></material-button>
     <material-button raised [disabled]="disabled || file == null" (trigger)="onUploadController.add(file)"><glyph icon="file_upload"></glyph></material-button>
