--- a/lib/components/fo_image_file_component/fo_image_file_component.scss
+++ b/lib/components/fo_image_file_component/fo_image_file_component.scss
@@ -1,4 +1,4 @@
-@import '../../style/common';
+@import '../../style/_constants.scss';
 
 div.container
 {
@@ -33,8 +33,11 @@ div.container
     display: none !important;
   }
 
-  material-button.add
+  p.error-output
   {
-    //margin: 1rem 0;
+    color: white;
+    background-color: $color-alert-bright;
+    padding: 0.5rem;
+    margin: 0.5rem 0 0 0;
   }
 }
