--- a/lib/style/_style.scss
+++ b/lib/style/_style.scss
@@ -13,8 +13,7 @@ button
   cursor: pointer;
   font-size: 1.1em;
   margin-right: 0.3em;
-  outline: none;
-  padding: 0.5em 1em;
+  outline: none; padding: 0.5em 1em;
 }
 
 button:hover
