--- a/lib/components/fo_select_component/fo_select_component.html
+++ b/lib/components/fo_select_component/fo_select_component.html
@@ -1,7 +1,8 @@
 <label (click)="(visible = true)">{{label}}</label>
 <material-dropdown-select
+        [width]="5"
         [buttonText]="selectedModel == null ? nullSelectionButtonText : selectedModel.toString()"
-        [popupMatchInputWidth]="false"
+        [popupMatchInputWidth]="true"
         [options]="selectionOptions"
         [selection]="selectionModel"
         [(visible)]="visible">
