--- a/lib/components/fo_select_component/fo_select_component.scss
+++ b/lib/components/fo_select_component/fo_select_component.scss
@@ -1,13 +1,14 @@
-label
+:host
 {
-  display: block;
-  margin-bottom: 0.2rem;
-  font-size: 0.9em;
-  color: #888;
-}
-material-dropdown-select
-{
-  width: 100%;
-  max-width: 40rem;
   margin-bottom: 1rem;
+  display: block;
+
+  label
+  {
+    width: 100%;
+    display: inline-block;
+    margin-bottom: 0.2em;
+    font-size: 0.8em;
+    color: #888;
+  }
 }
