--- a/lib/components/fo_sidebar_component/fo_sidebar_component.scss
+++ b/lib/components/fo_sidebar_component/fo_sidebar_component.scss
@@ -4,6 +4,16 @@ $width: 300px;
 
 :host /deep/
 {
+  div.container
+  {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: $width;
+    right: 0;
+    background-color: rgba(0,0,0,0.2);
+  }
+
   div.transformer
   {
     position: fixed;
@@ -28,13 +38,20 @@ $width: 300px;
       padding: 5rem 0.5rem 1rem 1rem;
       background-color: $color-grey-dark;
 
-      h3
+      p
       {
         margin: 0;
         color: white;
         text-transform: uppercase;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        vertical-align: middle;
+        glyph
+        {
+          cursor: pointer;
+        }
       }
-
     }
 
     div.content
